--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
               <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
-          <a href="#" class="h-btn ms-3 text-decoration-none">Contact me</a>
         </div>
       </div>
     </header>
@@ -104,7 +103,7 @@
         </div>
 
         <div class="main-btn">
-          <a href="#contact" class="btn">Hire me</a>
+          <a href="#contact" class="btn">Hire me!</a>
           <a href="resume.pdf" class="btn btn2" download> Download CV </a>
         </div>
       </div>
@@ -398,18 +397,20 @@
       </div>
     </section>
 
-    <section class="contact py-5 bg-white" id="contact">
+    <section class="contact py-5" id="contact">
       <div class="container">
-        <div class="text-center mb-5" data-aos="fade-down">
-          <h2>Contact <span>me</span></h2>
+        <!-- Section Heading -->
+        <div class="text-center mx-5 my-5" data-aos="fade-in">
+          <h2 class="fw-bold">Contact <span class="text-primary">Me</span></h2>
         </div>
+        <!-- End of Section Heading -->
         <div class="row justify-content-center">
           <div class="col-md-8" data-aos="zoom-in">
             <form>
               <div class="mb-3">
                 <input
                   type="text"
-                  class="form-control"
+                  class="form-control contact-border"
                   placeholder="Your Name"
                   required
                 />
@@ -417,20 +418,20 @@
               <div class="mb-3">
                 <input
                   type="email"
-                  class="form-control"
+                  class="form-control contact-border"
                   placeholder="Email Address"
                   required
                 />
               </div>
               <div class="mb-3">
                 <textarea
-                  class="form-control"
+                  class="form-control contact-border"
                   rows="5"
                   placeholder="Write Message Here."
                   required
                 ></textarea>
               </div>
-              <button type="submit" class="btn btn-primary w-100">
+              <button type="submit" class="btn contact-btn">
                 Send Message
               </button>
             </form>
