Minor changes on the layout

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       class="navbar navbar-expand-lg fixed-top d-flex align-items-center py-3"
     >
       <div class="container">
-        <!-- <p class="navbar-brand text-white fw-bold">Personal 
-        <span>Website</span>
-        </p> -->
+        <p class="navbar-brand text-white fw-bold">
+          Personal
+          <span>Website</span>
+        </p>
         <button
           class="navbar-toggler bg-primary"
           type="button"
@@ -49,9 +50,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
           </ul>
         </div>
       </div>
@@ -59,7 +57,7 @@
 
     <section class="hero d-flex align-items-center min-vh-100 ms-4" id="home">
       <div class="main-content ms-5" data-aos="fade-in">
-        <h4 class="fw-bold pb-2">Welcome,</h4>
+        <h4 class="fw-bold pb-2">Welcome!</h4>
         <h1 class="fw-bold">I'm <span>Yssah Barcial</span></h1>
 
         <!-- Typed Text -->
@@ -75,14 +73,6 @@
             rel="noopener noreferrer"
           >
             <i class="ri-facebook-fill"></i>
-          </a>
-
-          <a
-            href="https://www.instagram.com/yss.barcial/"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="ri-instagram-fill"></i>
           </a>
 
           <a
@@ -103,8 +93,7 @@
         </div>
 
         <div class="main-btn">
-          <a href="#contact" class="btn">Hire me!</a>
-          <a href="resume.pdf" class="btn btn2" download> Download CV </a>
+          <a href="resume.pdf" class="btn ms-0" download> Download CV </a>
         </div>
       </div>
     </section>
@@ -157,22 +146,22 @@
                     <i class="bi bi-pencil-square text-primary"></i>
                     <strong>Specialty:</strong> Web Design & Development
                   </li>
-                  <li>
-                    <i class="bi bi-check-circle text-primary"></i>
-                    <strong>Freelance:</strong>
-                    <span class="text-success">Available</span>
-                  </li>
                 </ul>
               </div>
               <div class="col-md-6">
                 <ul class="list-unstyled fs-6 text-light">
                   <li>
-                    <i class="bi bi-envelope text-primary"></i>
-                    <strong>Email:</strong> yjbarcial@gmail.com
+                    <i class="bi bi-address text-primary"></i>
+                    <strong>Address:</strong> Quarry, Brgy. Poblacion 9,
+                    Cabadbaran City
                   </li>
                   <li>
                     <i class="bi bi-phone text-primary"></i>
                     <strong>Phone:</strong> 0956 – 382 – 9900
+                  </li>
+                  <li>
+                    <i class="bi bi-envelope text-primary"></i>
+                    <strong>Email:</strong> yjbarcial@gmail.com
                   </li>
                 </ul>
               </div>
@@ -269,36 +258,55 @@
             <img
               src="./img/cert-introHTML.jpg"
               alt="Certificate 1"
-              class="img-fluid rounded-3 shadow border border-primary certificate-img"
+              class="img-fluid rounded-3 shadow certificate-img certificate-img"
             />
+            <p class="certificate-title">
+              SoloLearn<br /><em>Introduction to HTML Course</em>
+            </p>
           </div>
           <div class="col-md-6 col-lg-4 pb-2">
             <img
               src="./img/cert-introCSS.jpg"
               alt="Certificate 2"
-              class="img-fluid rounded-3 shadow border border-primary certificate-img"
+              class="img-fluid rounded-3 shadow certificate-img certificate-img"
             />
+            <p class="certificate-title">
+              SoloLearn<br /><em>Introduction to CSS Course</em>
+            </p>
           </div>
           <div class="col-md-6 col-lg-4 pb-2">
             <img
               src="./img/cert-introJS.jpg"
               alt="Certificate 3"
-              class="img-fluid rounded-3 shadow border border-primary certificate-img"
+              class="img-fluid rounded-3 shadow certificate-img certificate-img"
             />
+            <p class="certificate-title">
+              SoloLearn<br /><em>Introduction to JavaScript Course</em>
+            </p>
           </div>
           <div class="col-md-6 col-lg-4 pb-2">
             <img
               src="./img/cert-GENCONPH.png"
               alt="Certificate 4"
-              class="img-fluid rounded-3 shadow border border-primary certificate-img"
+              class="img-fluid rounded-3 shadow certificate-img certificate-img"
             />
+            <p class="certificate-title">
+              Certificate of Appearance<br /><em
+                >Generation Connect Philippines</em
+              >
+            </p>
           </div>
           <div class="col-md-6 col-lg-4 pb-2">
             <img
               src="./img/cert-DCE.jpg"
               alt="Certificate 5"
-              class="img-fluid rounded-3 shadow border border-primary certificate-img"
+              class="img-fluid rounded-3 shadow certificate-img certificate-img"
             />
+            <p class="certificate-title mt-1">
+              Certification of Attendance<br /><em
+                >Digital Careers Expo (DCE)</em
+              >
+            </p>
           </div>
         </div>
       </div>
@@ -331,7 +339,7 @@
       </div>
     </div>
 
-    <section class="portfolio py-5" id="portfolio">
+    <section class="portfolio py-3" id="portfolio">
       <div class="container">
         <!-- Section Heading -->
         <div class="text-center my-5 pb-5" data-aos="fade-down">
@@ -341,7 +349,7 @@
         </div>
 
         <!-- Portfolio Projects -->
-        <div class="row g-5" data-aos="zoom-in-up">
+        <div class="row g-5 mb-5 pb-5" data-aos="zoom-in-up">
           <!-- OrgMeUp! -->
           <div class="col-lg-6">
             <div class="portfolio-item p-4 shadow-sm rounded-4 text-center">
@@ -394,57 +402,18 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="contact py-5" id="contact">
-      <div class="container">
-        <!-- Section Heading -->
-        <div class="text-center mx-5 my-5" data-aos="fade-in">
-          <h2 class="fw-bold">Contact <span class="text-primary">Me</span></h2>
-        </div>
-        <!-- End of Section Heading -->
-        <div class="row justify-content-center">
-          <div class="col-md-8" data-aos="zoom-in">
-            <form>
-              <div class="mb-3">
-                <input
-                  type="text"
-                  class="form-control contact-border"
-                  placeholder="Your Name"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <input
-                  type="email"
-                  class="form-control contact-border"
-                  placeholder="Email Address"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <textarea
-                  class="form-control contact-border"
-                  rows="5"
-                  placeholder="Write Message Here."
-                  required
-                ></textarea>
-              </div>
-              <button type="submit" class="btn contact-btn">
-                Send Message
-              </button>
-            </form>
-          </div>
+        <div class="floating-arrow">
+          <a href="#home">
+            <i class="ri-arrow-up-s-line"></i>
+            <i class="ri-arrow-up-s-line"></i>
+            <i class="ri-arrow-up-s-line"></i>
+          </a>
         </div>
       </div>
     </section>
 
     <footer class="footer py-3 text-center">
-      <p>2025 Yssah Barcial, All Rights Reserved.</p>
-      <a href="#home" class="btn btn-outline-secondary">
-        <i class="ri-arrow-up-s-fill"></i>
-      </a>
+      <p>&copy; 2025 Yssah Barcial, All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
