--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Yssah Barcial</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -342,7 +342,7 @@
     <section class="portfolio py-3" id="portfolio">
       <div class="container">
         <!-- Section Heading -->
-        <div class="text-center my-5 pb-5" data-aos="fade-down">
+        <div class="text-center my-5" data-aos="fade-down">
           <h2 class="fw-bold">
             My <span class="text-primary">Portfolio</span>
           </h2>
