Changed navbar brand

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     >
       <div class="container">
         <p class="navbar-brand text-white fw-bold">
-          Personal
-          <span>Website</span>
+          LL
+          <span>X.</span>
         </p>
         <button
           class="navbar-toggler bg-primary"
