Changes in background

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     >
       <div class="container">
         <p class="navbar-brand text-white fw-bold">
-          LL
-          <span>X.</span>
+          LL<span>X.</span>
         </p>
         <button
           class="navbar-toggler bg-primary"
